# trajectory_control

./: Makefile  README.md  docker-compose.yml
docker/: Dockerfile  Makefile.workspace  entrypoint.sh
src/trajectory_controller/: .ament_lint_ignore  CMakeLists.txt  Makefile  package.xml
src/trajectory_controller/config/: params.yaml
src/trajectory_controller/include/trajectory_controller/: types.hpp  viz_utils.hpp
src/trajectory_controller/launch/: demo.launch.py  demo_with_obstacles.launch.py  graph_compare.launch.py
src/trajectory_controller/msg/: Segment.msg
src/trajectory_controller/rviz/: visualize_trajectory.rviz
src/trajectory_controller/src/: bezier_node.cpp  catmull.cpp  controller.cpp  controller_obstacles.cpp  gradient_smoothing.cpp  obstacle_avoider.cpp  obstacle_detector.cpp  trajectory_generator.cpp  waypoint_manager_node.cpp  waypoints.cpp
src/trajectory_controller/test/: test_smoothers.cpp
src/trajectory_controller/worlds/: obstacle_course.world
